[tool.poetry]
name = "langchain-starter-kit"
version = "0.1.1"
description = ""
authors = ["jalakoo <jalakoo@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-openai = "^0.1.8"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
neo4j = "^5.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
